# stock

./: README.md
02_stock/02_stock/: CMakeLists.txt  confectionery.cpp  confectionery.h  datadialog.cpp  datadialog.h  main.cpp  mainwindow.cpp  mainwindow.h  readingmaterial.cpp  readingmaterial.h  stock.cpp  stock.h  stockfactory.cpp  stockfactory.h  stocklist.cpp  stocklist.h
question_02_stock/question_02_stock/: CMakeLists.txt  abstractstockfactory.h  confectionery.cpp  main.cpp  readingmaterial.cpp  stockfactory.h  stocklist.h  stockwindow.cpp  stockwindow.h
question_03_stock_xml/build-question_03_stock_xml-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
question_03_stock_xml/build-question_03_stock_xml-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-f0d77820b554854dcae1.json  cmakeFiles-v1-eb3cb85d5dfd09eb2d25.json  codemodel-v2-473b0b9189769f01b9cc.json  directory-.-Debug-080d1f0df067aacf9aa2.json  index-2023-09-01T04-45-55-0285.json  target-question_03_stock_xml-Debug-c996ec7b37087c02617d.json  target-question_03_stock_xml_autogen-Debug-94488586b5888ddb2f80.json  target-question_03_stock_xml_autogen_timestamp_deps-Debug-2c58e4357bec769cd3e5.json
question_03_stock_xml/build-question_03_stock_xml-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
question_03_stock_xml/question_03_stock_xml/: CMakeLists.txt  abstractstockfactory.cpp  confectionery.h  filewriter.cpp  filewriter.h  main.cpp  readingmaterial.h  stock.cpp  stock.h  stockfactory.cpp  stocklist.cpp  stockwindow.cpp  stockwindow.h
